package business;

public enum Direction {
	UP,
	DOWN,
	LEFT,
	RIGHT,
}