package business;

import business.Direction;

public interface Movable {

	abstract public void move(Direction direction);

}