package business;

public interface PowerUps {

	void breakIce(Map map);
	void putIce(Map map);
	void powerUpIce(Map map);

}