package business.level.map;

import java.awt.image.BufferedImage;

public class Ice extends Block{

	public Ice(String name, BufferedImage imagePath, boolean solid) {
		super(name, imagePath, solid);
	}

}